Initial implementation of the data pipeline and image segmentation models.
- Developed a modular DataGenerator class to preprocess and augment image data.
- Implemented and trained U-Net and U-Net with VGG16 models for segmentation tasks.
- Added metrics (Dice Coefficient, IoU) and loss functions (Dice Loss + BCE) to evaluate performance.
- Automated the data preparation pipeline to ensure reproducibility and scalability.
- Ensured no data leakage between training, validation, and test sets.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ env_projet_8/
 # Ignore les fichiers générés par les modèles ou les données temporaires
 data/
 
+# Ignore les modèles
+models/
+
 # Ignore les fichiers de test
 test.ipynb
 api.py
