--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,6 +1,7 @@
 azure-monitor-opentelemetry==1.6.4
 fastapi==0.115.6
 httpx==0.28.1
+matplotlib==3.9.4
 numpy==2.0.2
 opentelemetry-api==1.29.0
 opentelemetry-sdk==1.29.0
