--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
       # Étape 1 : Récupérer le code
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          lfs: true
 
       # Étape 2 : Connexion à Azure
       - name: Login to Azure
